Migrate from API deprecated in Java 9